--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "devDependencies": {
         "axios": "^0.19",
         "cross-env": "^7.0",
-        "laravel-mix": "^6.0.19",
         "lodash": "^4.17.13",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.13",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "laravel-mix": "^6.0.19"
     }
 }
