--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.21.1",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "jquery": "^3.2",
         "lodash": "^4.17.13",
-        "postcss": "^8.1.14",
+        "popper.js": "^1.12",
+        "postcss": "^8.2.15",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.13",
-        "sass-loader": "^11.0.1"
+        "sass": "^1.15.2",
+        "sass-loader": "^8.0.0"
     },
     "dependencies": {
         "laravel-mix": "^6.0.19"
